--- a/client/package.json
+++ b/client/package.json
@@ -1,6 +1,7 @@
 {
   "name": "my-app",
   "version": "0.1.0",
+  "proxy": "http://127.0.0.1:5555",
   "private": true,
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.4.2",
