--- a/client/package.json
+++ b/client/package.json
@@ -4,15 +4,22 @@
   "proxy": "http://127.0.0.1:5555",
   "private": true,
   "dependencies": {
+    "@date-io/dayjs": "^2.17.0",
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
     "@fortawesome/fontawesome-free": "^6.4.2",
+    "@mui/styled-engine-sc": "^6.0.0-alpha.6",
+    "@mui/x-date-pickers": "^6.18.2",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.4.0",
+    "dayjs": "^1.11.10",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.18.0",
     "react-scripts": "5.0.1",
+    "styled-components": "^6.1.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
